Verical scroll added & table search overlap issue fixed

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -402,7 +402,7 @@ $box-shadow: 0px 0px 5px #b3c5de9c;
   margin-bottom: 5px !important;
   float: left;
   input {
-    padding: 10px 10px;
+    padding: 10px 35px 10px 10px;
     border: 1px solid $transparent;
     font-size: $font-size-1;
     outline: none;
@@ -421,7 +421,7 @@ $box-shadow: 0px 0px 5px #b3c5de9c;
   }
   mat-icon {
     position: absolute;
-    left: 310px;
+    left: 335px;
     padding: 10px 0 0 8px;
     color: $light-gray;
   }
